# xhourglass

./: .gitignore  LICENSE.md  README.md
src/: CMakeLists.txt  main.cpp
src/core/: parse.cpp  parse.h  xh_utils.cpp  xh_utils.h  xhduration.cpp  xhduration.h  xhtimer.cpp  xhtimer.h
src/resources/: win_res.rc  xhourglass.qrc
src/resources/help/: help-format_de_DE.txt  help-format_en_US.txt  help-format_es_ES.txt  help-format_fr_FR.txt
src/resources/styles/: style-light-base.qss  style-light-expired.qss
src/resources/translations/: xhourglass_lang.ts  xhourglass_lang_de_DE.ts  xhourglass_lang_en_US.ts  xhourglass_lang_es_ES.ts  xhourglass_lang_fr_FR.ts
src/ui/: mainwindow.cpp  mainwindow.h  xhtoasthandler.h  xhtoasthandler_linux.h  xhtoasthandler_win.h
